<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".presentation.signin.SignInFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"/>

    <ImageView
        android:id="@+id/imgLogoFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logofull" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="18sp"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@id/imgLogoFull"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="48dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/email_or_user"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@id/tvLogin"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_signin"
        android:layout_below="@id/tvForgotPassword"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_here"
        android:layout_marginTop="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@id/tvNoAccount"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"/>

</RelativeLayout>
