<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:transitionName="betTypeTransition">

            <TextView
                android:id="@+id/tvBetType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="SIMPLE"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12sp"
                android:background="@drawable/textview_background_black"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvBetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="GANADA"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="12sp"
                android:background="@drawable/textview_background_green"
                android:textColor="@android:color/white"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvBetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2024-09-24 15:39:55"
                android:textSize="@dimen/_10sp"
                android:layout_weight="0"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvBetTitle"
            tools:text="Ganador del partido: Real Madrid"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvBetMatch"
            tools:text="Real Madrid vs Barcelona"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/_10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundGray"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnlBet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/bet"/>

                <TextView
                    android:id="@+id/tvBetAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="S/ 21.00"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnlCuot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/quots"/>

                <TextView
                    android:id="@+id/tvBetQuot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="21.00"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnlWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/payment"/>

                <TextView
                    android:id="@+id/tvBetPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="S/ 50.00"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
